--- a/embed/static/style.css
+++ b/embed/static/style.css
@@ -21,6 +21,10 @@ input[type='text'],input[type='password'] {
     width: 15em;
 }
 
+select {
+    width: 300px;
+}
+
 input.num {
     width: 6em;
 }
